First stage of MarkerTimelineView development

--- a/app/src/main/res/layout/activity_room_review.xml
+++ b/app/src/main/res/layout/activity_room_review.xml
@@ -3,5 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <fhict.vef.ui.WidescreenVideoView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:id="@+id/room_review_video" />
 
 </LinearLayout>
