--- a/app/src/main/res/layout/activity_room_mark.xml
+++ b/app/src/main/res/layout/activity_room_mark.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-</LinearLayout>
+    android:layout_height="match_parent">
+    <fhict.vef.ui.MarkerTimelineView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        app:secondsPerHalfWidth="60"
+        android:id="@+id/room_mark_timeline" />
+</RelativeLayout>
